--- a/monografia/Conteudo/Comeco/RevisaoBibliografica/edificio-inteligente.tex
+++ b/monografia/Conteudo/Comeco/RevisaoBibliografica/edificio-inteligente.tex
@@ -1,16 +1,33 @@
-\chapter{Edifício Inteligente}
+\chapter{Revisão Bibliográfica}
+\section{Edifício Inteligente}
 
-O conceito de edifícios com algum tipo de autonomia humana é chamado de edifício inteligente, esse conceito surge nos Estados Unidos em meados da década de 80 junto com os sistemas de automação de segurança e iluminação para edifícios \cite{raissa2002}. Esses edifícios chamados de edifícios inteligentes têm se tornado populares nos últimos anos, mas os limites e requisitos do que um edifício precisa ter para ser considerado inteligente é algo nebuloso. O conceito de edifício inteligente em português origina de dois conceitos pouco distintos na língua inglesa, \emph{Intelligent Buildings} e \emph{Smart Buildings},
-``Intelligent'' segundo o \emph{Oxford Learner's Dictionaries} é aquele que é bom de aprendizado \cite{intelligence-oxford}, enquanto ``Smart'' é aquele que é inteligente \cite{smart-oxford}, o significado de ambas as palavras não diferem muito entre si, assim como os conceitos de \emph{Intelligent Buildings} e \emph{Smart Buildings}, ambos carregam as mesmas primícias, de um edifício com algum nível de automação, minimizando a interação humana \cite{Wong2005}.
+O conceito de edifícios com algum tipo de autonomia humana é chamado de edifício inteligente, esse conceito surge nos Estados Unidos em meados da década de 80 junto 
+com os sistemas de automação de segurança e iluminação para edifícios~\cite{raissa2002}. Esses edifícios chamados de edifícios inteligentes têm se tornado populares 
+nos últimos anos, mas os limites e requisitos do que um edifício precisa ter para ser considerado inteligente é algo nebuloso. O conceito de edifício inteligente em 
+português origina de dois conceitos pouco distintos na língua inglesa, \emph{Intelligent Buildings} e \emph{Smart Buildings},
+``Intelligent'' segundo o \emph{Oxford Learner's Dictionaries} é aquele que é bom de aprendizado~\cite{intelligence-oxford}, enquanto ``Smart'' é aquele que é 
+inteligente~\cite{smart-oxford}, o significado de ambas as palavras não diferem muito entre si, assim como os conceitos de \emph{Intelligent Buildings} e 
+\emph{Smart Buildings}, ambos carregam as mesmas primícias, de um edifício com algum nível de automação, minimizando a interação humana~\cite{Wong2005}.
 
-\section{Intelligent Building}
-\emph{Intelligent Buildings} vem sendo pesquisados e desenvolvidos há pelo menos três décadas \cite{Buckman2014} e existem no mínimo 30 definições diferentes para esse conceito \cite{Wigginton2002}, em 1990, Powell traz uma definição de edifício inteligente (Intelligent Building) comentando o que Stubbings diz em 1988,
+\subsection{Intelligent Building}
+\emph{Intelligent Buildings} vem sendo pesquisados e desenvolvidos há pelo menos três décadas~\cite{Buckman2014} e existem no mínimo 30 definições diferentes 
+para esse conceito~\cite{Wigginton2002}, em 1990, Powell traz uma definição de edifício inteligente (Intelligent Building) comentando o que Stubbings diz em 1988,
 \begin{quote}
-    At present the term ‘intelligent building’ is normally taken to mean ‘a building which totally controls its own environment’ \cite{stubbings1986}. This seems to imply that it is the technical control of heating and air conditioning, lighting, security, fire protection, telecommunication and data services, lifts and other similar building operations that is important - a control typically given over to a management computer system. Such a definition for a conventionally intelligent building does not suggest user interaction at all. \cite{Powell1990}
-\end{quote}Stubbings diz que um edifício inteligente é aquele edifício capaz de controlar seu próprio ambiente e Powell expande essa ideia, definindo que um edifício inteligente é aquele capaz de controlar seus sistemas de Aquecimento, Ventilação e Ar-Condicionado (AVAC), iluminação, segurança, combate a incêndio etc. através de um sistema de gerenciamento de edifício (Building Management System). Clements-Croome em 2009 define um edifício inteligente como aquele que é responsivo aos requisitos dos seus ocupantes, organizações e sociedade, sendo sustentável no consumo de água e energia, gerando pouca poluição e sendo funcional de acordo com as necessidades do usuário \cite{croome2011} e Brooks sugere que \emph{Intelligent Building} e seu sistema de gestão (Building Management System) são essencialmente a mesma coisa \cite{Buckman2014}, um sistema de controle que abrange todo o edifício, que conecta, controla e monitora a planta fixa e os equipamentos da instalação \cite{brooks2012}.
+    At present the term ‘intelligent building’ is normally taken to mean ‘a building which totally controls its own environment’~\cite{stubbings1986}. 
+    This seems to imply that it is the technical control of heating and air conditioning, lighting, security, fire protection, telecommunication and data services, 
+    lifts and other similar building operations that is important \- a control typically given over to a management computer system. 
+    Such a definition for a conventionally intelligent building does not suggest user interaction at all.~\cite{Powell1990}
+\end{quote}Stubbings diz que um edifício inteligente é aquele edifício capaz de controlar seu próprio ambiente e Powell expande essa ideia, definindo que 
+um edifício inteligente é aquele capaz de controlar seus sistemas de Aquecimento, Ventilação e Ar-Condicionado (AVAC), iluminação, segurança, combate a 
+incêndio etc.\ através de um sistema de gerenciamento de edifício (Building Management System). 
+Clements-Croome em 2009 define um edifício inteligente como aquele que é responsivo aos requisitos dos seus ocupantes, 
+organizações e sociedade, sendo sustentável no consumo de água e energia, gerando pouca poluição e sendo funcional de acordo com as 
+necessidades do usuário~\cite{croome2011} e Brooks sugere que \emph{Intelligent Building} e seu sistema de gestão (Building Management System) 
+são essencialmente a mesma coisa~\cite{Buckman2014}, um sistema de controle que abrange todo o edifício, que conecta, controla e monitora a 
+planta fixa e os equipamentos da instalação~\cite{brooks2012}.
 
-\section{Smart Building}
-\begin{figure}[h!]
+\subsection{Smart Building}
+\begin{figure}[H]
     \conteudoFigura
     [\citeonline{Buckman2014}]         % Fonte   
     {0.45}                               % scale: 0.01 - 1
@@ -18,7 +35,9 @@ O conceito de edifícios com algum tipo de autonomia humana é chamado de edifí
     {Progressão da automação em edifícios}     % Texto
     {fig:Building-progress}                      % identificador da figura
 \end{figure}
-Na figura \ref{fig:Building-progress}, Buckman, Mayfield, Beck mostram uma linha do tempo, partindo de um edifício primitivo com nenhum controle do seu ambiente até um edifício inteligente. Segundo sua pesquisa, sugerem que existem três principais pontos que desenvolvem um edifício até o estado de edifício inteligente, são eles:
+Na figura~\ref{fig:Building-progress}, Buckman, Mayfield, Beck mostram uma linha do tempo, partindo de um edifício primitivo com nenhum 
+controle do seu ambiente até um edifício inteligente. Segundo sua pesquisa, sugerem que existem três principais pontos que desenvolvem 
+um edifício até o estado de edifício inteligente, são eles:
 \begin{enumerate}
     \item Longevidade;
     \item Energia e Eficiência; e
@@ -31,14 +50,26 @@ Para atingir o estado de edifício inteligente nos três pontos, existem quatro 
     \item Materiais e Construção, a forma física do edifício; e
     \item Empresa, a forma como são coletadas informações e usadas para melhorar a performance dos ocupantes.
 \end{enumerate}
-A evolução desses métodos em um edifício partindo do primitivo ao inteligente é mostrada na figura \ref{fig:Building-progress}.
-De acordo com a pesquisa, Buckman, Mayfield, Beck sugerem que em um \emph{Smart Building}, os quatro aspectos que variam o nível do edifício são desenvolvidos lado a lado, usando a informação de um na operação do outro, diferindo de um \emph{Intelligent Building} que desenvolve a ``Inteligência'' citada acima de forma independente do outros três aspectos. \emph{Smart Buildings} usam tanto o controle humano, quanto a automação para atingir os quatro aspectos apresentados acima. O aspecto de ``Controle'', o mais importante para esse trabalho, deve apresentar informações do aspecto de ``Inteligência'' para os ocupantes do edifício, para que os mesmo possam se adaptar ao edifício assim como o edifício se adapta a eles\cite{Buckman2014}.
+A evolução desses métodos em um edifício partindo do primitivo ao inteligente é mostrada na figura~\ref{fig:Building-progress}.
+De acordo com a pesquisa, Buckman, Mayfield, Beck sugerem que em um \emph{Smart Building}, os quatro aspectos que variam o nível 
+do edifício são desenvolvidos lado a lado, usando a informação de um na operação do outro, diferindo de um \emph{Intelligent Building} que 
+desenvolve a ``Inteligência'' citada acima de forma independente do outros três aspectos.\ \emph{Smart Buildings} usam tanto o controle humano, 
+quanto a automação para atingir os quatro aspectos apresentados acima. O aspecto de ``Controle'', o mais importante para esse trabalho, 
+deve apresentar informações do aspecto de ``Inteligência'' para os ocupantes do edifício, para que os mesmo possam se adaptar ao edifício 
+assim como o edifício se adapta a eles\cite{Buckman2014}.
 
-Sensores inteligentes, que podem ser adicionados a qualquer momento da vida de um edifício \cite{Kamal2021}, frutos da internet das coisas (IoT, do inglês Internet of Things) permitem uma rápida implementação de instalações para edifícios inteligentes, como gerenciamento do sistema de AVAC, sistemas de segurança, monitoramento por câmeras, alertas para eventos como incêndio, vazamento de gás e monitoramento da integridade estrutural do edifício \cite{Bellini2022}. A adoção de IoT promove a conectividade entre sensores, dispositivos e sistemas do edifício a nuvem, tal conexão promove o uso de aplicações que usaram os dados coletados \cite{Berkoben2020}.
+Sensores inteligentes, que podem ser adicionados a qualquer momento da vida de um edifício~\cite{Kamal2021}, frutos da internet das coisas 
+(IoT, do inglês Internet of Things) permitem uma rápida implementação de instalações para edifícios inteligentes, como gerenciamento do sistema de AVAC, 
+sistemas de segurança, monitoramento por câmeras, alertas para eventos como incêndio, vazamento de gás e monitoramento da integridade estrutural 
+do edifício~\cite{Bellini2022}. A adoção de IoT promove a conectividade entre sensores, dispositivos e sistemas do edifício a nuvem, 
+tal conexão promove o uso de aplicações que usaram os dados coletados~\cite{Berkoben2020}.
 
-\section{Sistema de Gerenciamento de Edifício}
-Sistemas de Gerenciamento de Edifício, ou Building Management Systems (BMS) em inglês são controladores inteligentes baseados em microprocessadores instalados na rede para monitorar e controlar os aspectos técnicos de um edifício e seus serviços \cite{appliedrisk2019}. Um BMS pode controlar componentes com protocolos de mais baixo nível, como BACnet, Modbus e etc. \cite{Berkoben2020} os subsistemas do BMS ligam as funcionalidades individuais desses equipamentos para que eles possam operar como um único sistema \cite{appliedrisk2019}.
-\begin{figure}[h!]
+\subsection{Sistema de Gerenciamento de Edifício}
+Sistemas de Gerenciamento de Edifício, ou Building Management Systems (BMS) em inglês são controladores inteligentes baseados em 
+microprocessadores instalados na rede para monitorar e controlar os aspectos técnicos de um edifício e seus serviços~\cite{appliedrisk2019}. 
+Um BMS pode controlar componentes com protocolos de mais baixo nível, como BACnet, Modbus e etc.~\cite{Berkoben2020} os subsistemas do BMS 
+ligam as funcionalidades individuais desses equipamentos para que eles possam operar como um único sistema~\cite{appliedrisk2019}.
+\begin{figure}[H]
     \conteudoFigura
     [\citeonline{appliedrisk2019}]         % Fonte   
     {0.7}                               % scale: 0.01 - 1
@@ -46,21 +77,28 @@ Sistemas de Gerenciamento de Edifício, ou Building Management Systems (BMS) em 
     {Relação entre os componentes do BMS e sistemas}     % Texto
     {fig:BMS-relations}                      % identificador da figura
 \end{figure}
-A figura \ref{fig:BMS-relations} mostra um exemplo da relação entre os componentes de um BMS.
+A figura~\ref{fig:BMS-relations} mostra um exemplo da relação entre os componentes de um BMS.\@
  
+\subsection{Sistema de Controle e Automação de Edifício}
+Quando um Sistema de Gerenciamento de Edifício passa a satisfazer os requisitos da ISO 16484~\cite{ISO16484}, tais como suporte a BACnet ele 
+passa a ser um Sistema de Controle e Automação de Edifício (Building Automation Control System, BACS)~\cite{docsuspeito2006}. 
+Os conceitos de BMS e BACS possuem mais similaridades do que diferenças sendo difícil encontrar na literatura materiais que os diferenciem bem, 
+sendo assim, para este trabalho, Sistemas de Gerenciamento de Edifícios (BMS) e Sistemas de Controle e Automação de Edifícios (BACS) serão considerados sinônimos.
 
-\section{Sistema de Controle e Automação de Edifício}
-Quando um Sistema de Gerenciamento de Edifício passa a satisfazer os requisitos da ISO 16484 \cite{ISO16484}, tais como suporte a BACnet ele passa a ser um Sistema de Controle e Automação de Edifício (Building Automation Control System, BACS) \cite{docsuspeito2006}. Os conceitos de BMS e BACS possuem mais similaridades do que diferenças sendo difícil encontrar na literatura materiais que os diferenciem bem, sendo assim, para este trabalho, Sistemas de Gerenciamento de Edifícios (BMS) e Sistemas de Controle e Automação de Edifícios (BACS) serão considerados sinônimos.
-
-Assim como o Sistema de Gerenciamento de Edifício, o Sistema de Controle e Automação de Edifício também é responsável por controlar e monitorar os aspectos técnicos de um edifício e seus serviços, o BACS também é divido em três camadas, como representado na figura \ref{fig:BMS-relations}, sendo elas:
+Assim como o Sistema de Gerenciamento de Edifício, o Sistema de Controle e Automação de Edifício também é responsável por controlar e 
+monitorar os aspectos técnicos de um edifício e seus serviços, o BACS também é divido em três camadas, como representado 
+na figura~\ref{fig:BMS-relations}, sendo elas:
 \begin{itemize}
     \item Camada de Campo (\emph{Field Layer});
     \item Camada de Automação (\emph{Automation Layer}); e 
     \item Cada de Gerenciamento (\emph{Management Layer}).
 \end{itemize}
-A camada de campo é a camada mais baixa, sendo nela encontrados os sensores e atuadores que fazem a interação com o ambiente. A camada de automação é onde os dados são processados, loops de controle são executados e alarmes ativados. Por último, a camada de gerenciamento é a responsável por apresentar os dados do sistema, criar logs de acontecimentos e intermediar o controle do usuário com o sistema. Sistemas mais modernos tendem a separar a lógica da interface gráfica para o usuário com o objetivo de criar acessos mais flexíveis aos BACS \cite{Domingues2016}.
+A camada de campo é a camada mais baixa, sendo nela encontrados os sensores e atuadores que fazem a interação com o ambiente. 
+A camada de automação é onde os dados são processados, loops de controle são executados e alarmes ativados. Por último, a camada de gerenciamento 
+é a responsável por apresentar os dados do sistema, criar logs de acontecimentos e intermediar o controle do usuário com o sistema. 
+Sistemas mais modernos tendem a separar a lógica da interface gráfica para o usuário com o objetivo de criar acessos mais flexíveis aos BACS~\cite{Domingues2016}.
 
-\begin{figure}[h!]
+\begin{figure}[H]
     \conteudoFigura
     [\citeonline{Domingues2016}]         % Fonte   
     {0.2}                               % scale: 0.01 - 1
@@ -68,4 +106,9 @@ A camada de campo é a camada mais baixa, sendo nela encontrados os sensores e a
     {Pilhas de Hardware e Software envolvidos no Sistema de Controle e Automação de Edifício}     % Texto
     {fig:BAS-diagram}                      % identificador da figura
 \end{figure}
-O caminho da informação em um BACS tem a forma representada pela figura \ref{fig:BAS-diagram}, sensores e atuadores interagem com dispositivos físicos através de módulos em hardware, controlados por um microcontrolador responsável por enviar os dados até o BACS através de uma conexão de comunicação (também chamada de barramento de campo ou \emph{fieldbus} em inglês) através de um dos protocolos de baixo nível já citados, como BACnet, KNX, LonWorks, Modbus, ZigBee ou EnOcean. Os dados são recebidos por módulos de hardware que expõem esses dados para o software através de \emph{datapoints} (ou também chamados de \emph{endpoints}, \emph{tags} ou \emph{points}) que interagem com o software para realizar a ação necessária \cite{Domingues2016}.
+O caminho da informação em um BACS tem a forma representada pela figura~\ref{fig:BAS-diagram}, sensores e atuadores interagem com dispositivos 
+físicos através de módulos em hardware, controlados por um microcontrolador responsável por enviar os dados até o BACS através de uma conexão 
+de comunicação (também chamada de barramento de campo ou \emph{fieldbus} em inglês) através de um dos protocolos de baixo nível já citados, 
+como BACnet, KNX, LonWorks, Modbus, ZigBee ou EnOcean. Os dados são recebidos por módulos de hardware que expõem esses dados para o software 
+através de \emph{datapoints} (ou também chamados de \emph{endpoints}, \emph{tags} ou \emph{points}) que interagem com o software para realizar 
+a ação necessária~\cite{Domingues2016}.
