--- a/monografia/Conteudo/Comeco/RevisaoBibliografica/internet-das-coisas.tex
+++ b/monografia/Conteudo/Comeco/RevisaoBibliografica/internet-das-coisas.tex
@@ -1,10 +1,10 @@
-\chapter{Internet das Coisas}
+\section{Internet das Coisas}
 
 Enquanto a internet foi desenvolvida com dados criados por pessoas, 
-a Internet das Coisas é sobre os dados criados por objetos \cite{Nord2019}. 
+a Internet das Coisas é sobre os dados criados por objetos~\cite{Nord2019}. 
 Madakam, Ramaswamy e Tripathi definem Internet das Coisas como uma rede de objetos inteligente 
 aberta que tem a capacidade de se auto-organizar, compartilhar informações, dados e 
-recursos \cite{Madakam2015}.
+recursos~\cite{Madakam2015}.
 
 Internet das Coisas é muitas vezes referido pela sigla \verb'IoT' que vem do 
 seu nome em inglês \textit{Internet of Things}. No nome dessa tecnologia temos as 
@@ -35,9 +35,9 @@ geralmente um sistema IoT é formado por três camadas, sendo elas:
     \item Camada de Aplicação, que oferece os serviços chamados \emph{inteligentes} para os usuários 
     finais.
 \end{itemize}
-\cite{Yan2014}.
+~\cite{Yan2014}.
 
-\begin{figure}[h!]
+\begin{figure}[H]
     \conteudoFigura
     [\citeonline{statista-iot-connected-devices}]         % Fonte   
     {0.3}                               % scale: 0.01 - 1
@@ -49,14 +49,14 @@ geralmente um sistema IoT é formado por três camadas, sendo elas:
 Segundo a empresa especializada em coleta de dados, Statista, 
 a quantidade de dispositivos \verb'IoT' conectados no mundo passa de 15 bilhões em 
 2023 com projeção para quase o dobro deste número até o fim da década 
-\cite{statista-iot-connected-devices} como mostrado na figura \ref{fig:statistic_01}. 
+\cite{statista-iot-connected-devices} como mostrado na figura~\ref{fig:statistic_01}. 
 
 Isso se deve muito ao fato de que sensores e microcontroladores ficaram mais baratos, o 
-preço médio dos sensores caiu 200\% entre 2004 e 2018 \cite{microsoft-1} o que significa
+preço médio dos sensores caiu 200\% entre 2004 e 2018~\cite{microsoft1} o que significa
 mais produtos finais voltado para \verb'IoT' já que ficou possível embarcar sensores em itens 
 do dia a dia com custos acessíveis.
 
-\begin{figure}[h!]
+\begin{figure}[H]
     \conteudoFigura
     [\citeonline{Minoli2017}]         % Fonte   
     {0.8}                               % scale: 0.01 - 1
@@ -68,15 +68,15 @@ do dia a dia com custos acessíveis.
 Alguns anos atrás, mesmo em edifícios com BACS, não era incomum encontrar diferentes protocolos, 
 redes e cabos, o que gerava ineficiência tanto na implantação como nos sistemas de gerenciamento. 
 Dessa forma algumas soluções migraram para o uso de cabo e conjunto de protocolos comuns entre as 
-aplicações, como o cabo de par trançado categoria 6 e o protocolo TCP/IP. 
+aplicações, como o cabo de par trançado categoria 6 e o protocolo TCP/IP.
 Com a convergência para protocolos como TCP/IP facilitou a entrada do \verb'IoT' em BACS, 
 como mostrado na figura 
-\ref{fig:acs-iot-evolution} \cite{Minoli2017}.
+~\ref{fig:acs-iot-evolution}~\cite{Minoli2017}.
 
 Já é possível encontrar equipamentos preparados para uso em BACS com suporte a protocolos \verb'IoT',
-como o PFC200 da WAGO que suporta o protocolo MQTT (citado na seção \ref{sec:mqtt}).
+como o PFC200 da WAGO que suporta o protocolo MQTT (citado na seção~\ref{sec:mqtt}).
 
-\begin{figure}[h!]
+\begin{figure}[H]
     \conteudoFigura
     [\citeonline{wago-1}]         % Fonte   
     {0.10}                               % scale: 0.01 - 1
