--- a/monografia/Conteudo/bibliografia.bib
+++ b/monografia/Conteudo/bibliografia.bib
@@ -363,7 +363,7 @@ and Building Management},
   urldate = {18 de dezembro de 2023}
 }
 
-@article{microsoft-1,
+@article{microsoft1,
    title = {2019 Manufacturing Trends Report},
    author = {Microsoft},
    year = {2019},
@@ -399,6 +399,15 @@ and Building Management},
    title = {Theory and Application of Zero Trust Security: A Brief Survey},
    volume = {25},
    year = {2023},
+}
+
+@article{article1,
+author = {Juhász, László},
+year = {2018},
+month = {10},
+pages = {51-70},
+title = {Overview of industry 4.0 tools for cost-benefit analysis},
+volume = {4}
 }
 
 % LEMBRAR DE MUDAR ESSA REFERÊNCIA PRO JEITO CERTO DE DICIONÁRIO PELO AMOR DE DEUS
