--- a/monografia/Conteudo/informacoes_gerais.tex
+++ b/monografia/Conteudo/informacoes_gerais.tex
@@ -1,10 +1,10 @@
-\newcommand{\universidade}{unioeste - universidade estadual do oeste do paraná}
+\newcommand{\universidade}{unioeste \- universidade estadual do oeste do paraná}
 \newcommand{\centro}{centro de engenharias e ciências exatas}
 \newcommand{\curso}{curso de ciência da computação}
 % ---
 % Informações de dados para CAPA e FOLHA DE ROSTO
 % ---
-\titulo{Desenvolvimento de um sistema multiusuários para edifícios inteligentes}
+\titulo{Desenvolvimento de um sistema multiusuário para edifícios inteligentes}
 \autor{Victor Hugo de Almeida Alicino}
 \local{FOZ DO IGUAÇU}
 \data{2024}
@@ -20,7 +20,7 @@
 % O preambulo deve conter o tipo do trabalho, o objetivo, 
 % o nome da instituição e a área de concentração 
 \preambulo{Monografia submetida à Universidade Estadual do Oeste do Paraná, 
-Curso de Ciência da Computação - Campus de Foz do Iguaçu,
+Curso de Ciência da Computação \- Campus de Foz do Iguaçu,
 como requisito parcial para obtenção do grau
 de Bacharel em Ciência da Computação.}
 
