--- a/monografia/Conteudo/Desenvolvimento/arquitetura.tex
+++ b/monografia/Conteudo/Desenvolvimento/arquitetura.tex
@@ -1,5 +1,5 @@
-\chapter{Arquitetura}
-\section{Camada Física}
+\section{Arquitetura}
+\subsection{Camada Física}
 
 A arquitetura proposta é ilustrada na figura \ref{fig:arquitetura1}.
 \begin{figure}[h!]
