--- a/monografia/monografia.tex
+++ b/monografia/monografia.tex
@@ -50,6 +50,9 @@
     
     %--------------------------------------------------------------
     % Parte III - Desenvolvimento
+    \include{Conteudo/Desenvolvimento/sistema.tex}
+
+    \include{Conteudo/Desenvolvimento/arquitetura.tex}
     %--------------------------------------------------------------
 
     %--------------------------------------------------------------
