--- a/monografia/Conteudo/Desenvolvimento/ServidorLocal/introducao.tex
+++ b/monografia/Conteudo/Desenvolvimento/ServidorLocal/introducao.tex
@@ -1,24 +1,15 @@
-\chapter{\textbf{Opus}}
+\section{\textbf{Servidor Local}}
 \label{opus}
 
 A aplicação que gerencia os dispositivos, a abstração do edifício no sistema e o nível de acesso de usuários a dispositivos específicos
-é chamada de \emph{Opus}, nela estão contido os \emph{drivers} que são responsáveis por se comunicar com os dispositivos.
-
-O \emph{Opus} foi desenvolvido em Python, especificamente na versão 3.12.2 e faz uso de diversas bibliotecas externas para seu funcionamento,
-sendo algumas das mais importantes:
-\begin{itemize}
-    \item getmac;
-    \item paho-mqtt;
-    \item PyYAML;
-    \item SQLAlchemy;
-\end{itemize}
+é chamada de \emph{Opus}, nela estão contidos \emph{drivers} responsáveis por se comunicar com os dispositivos.
 
 A aplicação é organizada em quatro módulos principais, como ilustrado na figura \ref{fig:opus1}.
 \begin{figure}[h!]
     \conteudoFigura
-    [Elaborado pelo Autor (2024)]
-    {0.7}
-    {opus1.png}
+    [Elaborado pelo Autor (2025)]
+    {0.35}
+    {opus_overall.png}
     {Módulos do Opus}
     {fig:opus1}
 \end{figure}
